Bug 1720643 perform getUserMedia Permissions Policy checks even when "media.navigator.permission.disabled" is set r=jib
"media.getusermedia.microphone.deny" and "media.getusermedia.camera.deny" now
override "media.navigator.permission.disabled".

User permission checks are removed because they are repeated in the app.

Differential Revision: https://phabricator.services.mozilla.com/D120065

UltraBlame original commit: 3c77f9f68fe8e21cbd09a89e802ec62f16b57ee9

--- a/testing/web-platform/meta/screen-capture/permissions-policy-audio+video.https.sub.html.ini
+++ b/testing/web-platform/meta/screen-capture/permissions-policy-audio+video.https.sub.html.ini
@@ -56,6 +56,14 @@ iframes
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
 FAIL
 [
 Default
@@ -182,5 +190,13 @@ attribute
 .
 ]
 expected
+:
+if
+os
+=
+=
+"
+android
+"
 :
 FAIL
