--- a/testing/web-platform/meta/screen-capture/permissions-policy-video.https.sub.html.ini
+++ b/testing/web-platform/meta/screen-capture/permissions-policy-video.https.sub.html.ini
@@ -54,6 +54,14 @@ iframes
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
 FAIL
 [
 Default
@@ -180,5 +188,13 @@ attribute
 .
 ]
 expected
+:
+if
+os
+=
+=
+"
+android
+"
 :
 FAIL
