--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -70154,7 +70154,7 @@ type
 RelaxedAtomicBool
 value
 :
-false
+true
 mirror
 :
 always
@@ -70629,7 +70629,7 @@ type
 RelaxedAtomicBool
 value
 :
-false
+true
 mirror
 :
 always
