Bug 1721076 [wpt PR 29698] - Update wpt metadata, a=testonly
wpt-pr: 29698
wpt-type: metadata

UltraBlame original commit: 4428ba9ff6372969187e408e5b9ea95e00a883d0

--- a/testing/web-platform/meta/fetch/api/basic/stream-response.any.js.ini
+++ b/testing/web-platform/meta/fetch/api/basic/stream-response.any.js.ini
@@ -61,6 +61,23 @@ ERROR
 CRASH
 ]
 [
+Stream
+response
+'
+s
+body
+when
+content
+-
+type
+is
+not
+present
+]
+expected
+:
+FAIL
+[
 stream
 -
 response
@@ -105,6 +122,23 @@ debug
 OK
 CRASH
 ]
+[
+Stream
+response
+'
+s
+body
+when
+content
+-
+type
+is
+not
+present
+]
+expected
+:
+FAIL
 [
 stream
 -
@@ -153,6 +187,23 @@ ERROR
 CRASH
 ]
 [
+Stream
+response
+'
+s
+body
+when
+content
+-
+type
+is
+not
+present
+]
+expected
+:
+FAIL
+[
 stream
 -
 response
@@ -200,3 +251,20 @@ OK
 ERROR
 CRASH
 ]
+[
+Stream
+response
+'
+s
+body
+when
+content
+-
+type
+is
+not
+present
+]
+expected
+:
+FAIL
