Bug 1721762 [wpt PR 29742] - Update wpt metadata, a=testonly
wpt-pr: 29742
wpt-type: metadata

UltraBlame original commit: 656b17972f8561fab9f22ef8b90a7f00de4cbd1e

--- a/testing/web-platform/meta/webcodecs/videoFrame-copyTo.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-copyTo.any.js.ini
@@ -139,6 +139,36 @@ expected
 :
 FAIL
 [
+Test
+copying
+I420
+frame
+to
+a
+non
+-
+shared
+ArrayBuffer
+]
+expected
+:
+FAIL
+[
+Test
+copying
+I420
+frame
+to
+a
+non
+-
+shared
+ArrayBufferView
+]
+expected
+:
+FAIL
+[
 videoFrame
 -
 copyTo
@@ -276,6 +306,36 @@ Test
 closed
 frame
 .
+]
+expected
+:
+FAIL
+[
+Test
+copying
+I420
+frame
+to
+a
+non
+-
+shared
+ArrayBuffer
+]
+expected
+:
+FAIL
+[
+Test
+copying
+I420
+frame
+to
+a
+non
+-
+shared
+ArrayBufferView
 ]
 expected
 :
