--- a/testing/web-platform/meta/webcodecs/videoFrame-construction.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-construction.any.js.ini
@@ -1,5 +1,7 @@
 [
 videoFrame
+-
+construction
 .
 any
 .
@@ -21,6 +23,15 @@ expected
 FAIL
 [
 Test
+closed
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+Test
 we
 can
 construct
@@ -59,6 +70,83 @@ closed
 ImageBitmap
 throws
 .
+]
+expected
+:
+FAIL
+[
+Test
+invalid
+buffer
+constructed
+VideoFrames
+]
+expected
+:
+FAIL
+[
+Test
+Uint8Array
+(
+ArrayBuffer
+)
+constructed
+I420
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+ArrayBuffer
+constructed
+I420
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+planar
+constructed
+I420
+VideoFrame
+with
+colorSpace
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+I420
++
+Alpha
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+NV12
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+RGB
+VideoFrames
 ]
 expected
 :
@@ -137,80 +225,9 @@ expected
 :
 FAIL
 [
-Test
-closed
-VideoFrame
-.
-]
-expected
-:
-FAIL
-[
-Test
-invalid
-buffer
-constructed
-VideoFrames
-]
-expected
-:
-FAIL
-[
-Test
-buffer
-constructed
-I420
-VideoFrame
-]
-expected
-:
-FAIL
-[
-Test
-planar
-constructed
-I420
-VideoFrame
-with
-colorSpace
-]
-expected
-:
-FAIL
-[
-Test
-buffer
-constructed
-I420
-+
-Alpha
-VideoFrame
-]
-expected
-:
-FAIL
-[
-Test
-buffer
-constructed
-NV12
-VideoFrame
-]
-expected
-:
-FAIL
-[
-Test
-buffer
-constructed
-RGB
-VideoFrames
-]
-expected
-:
-FAIL
-[
 videoFrame
+-
+construction
 .
 any
 .
@@ -230,6 +247,15 @@ expected
 FAIL
 [
 Test
+closed
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+Test
 we
 can
 construct
@@ -268,6 +294,83 @@ closed
 ImageBitmap
 throws
 .
+]
+expected
+:
+FAIL
+[
+Test
+invalid
+buffer
+constructed
+VideoFrames
+]
+expected
+:
+FAIL
+[
+Test
+Uint8Array
+(
+ArrayBuffer
+)
+constructed
+I420
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+ArrayBuffer
+constructed
+I420
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+planar
+constructed
+I420
+VideoFrame
+with
+colorSpace
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+I420
++
+Alpha
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+NV12
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+buffer
+constructed
+RGB
+VideoFrames
 ]
 expected
 :
@@ -341,79 +444,6 @@ the
 alpha
 channel
 .
-]
-expected
-:
-FAIL
-[
-Test
-closed
-VideoFrame
-.
-]
-expected
-:
-FAIL
-[
-Test
-invalid
-buffer
-constructed
-VideoFrames
-]
-expected
-:
-FAIL
-[
-Test
-buffer
-constructed
-I420
-VideoFrame
-]
-expected
-:
-FAIL
-[
-Test
-planar
-constructed
-I420
-VideoFrame
-with
-colorSpace
-]
-expected
-:
-FAIL
-[
-Test
-buffer
-constructed
-I420
-+
-Alpha
-VideoFrame
-]
-expected
-:
-FAIL
-[
-Test
-buffer
-constructed
-NV12
-VideoFrame
-]
-expected
-:
-FAIL
-[
-Test
-buffer
-constructed
-RGB
-VideoFrames
 ]
 expected
 :
