Bug 1721883 [wpt PR 29753] - Update wpt metadata, a=testonly
wpt-pr: 29753
wpt-type: metadata

UltraBlame original commit: 4b191d68092fdd5f7b61068d2c3fd6f5f350c042

--- a/testing/web-platform/meta/clipboard-apis/async-custom-formats-write-read.tentative.https.html.ini
+++ b/testing/web-platform/meta/clipboard-apis/async-custom-formats-write-read.tentative.https.html.ini
@@ -1,9 +1,9 @@
 [
 async
 -
-platform
+custom
 -
-specific
+formats
 -
 write
 -
@@ -22,11 +22,13 @@ and
 read
 clipboard
 given
+2
 platform
 -
-specific
-raw
-input
+neutral
+custom
+format
+inputs
 ]
 expected
 :
