Bug 1722276 - Collect product information from pages. r=mossop
Differential Revision: https://phabricator.services.mozilla.com/D120826

UltraBlame original commit: 8bb60f0de61b6abf3a3a5e0acb1773ce719f0293

--- a/browser/components/pagedata/tests/browser/browser.ini
+++ b/browser/components/pagedata/tests/browser/browser.ini
@@ -79,8 +79,19 @@ files
 head
 .
 js
+product1
+.
+html
+product2
+.
+html
 [
 browser_pagedata_basic
+.
+js
+]
+[
+browser_pagedata_product
 .
 js
 ]
