Bug 1722908 - Make accent-color foreground-computation prefs atomic. r=jnicol
When there are remote processes  we query all colors on the main thread
as part of the pref update, but otherwise this code can totally run OMT,
and we hit the thread-safety assert in:

  https://searchfox.org/mozilla-central/rev/cfc40681e13089f92fb3f5f67d5d527fb04d9505/modules/libpref/init/StaticPrefListBegin.h#23

Differential Revision: https://phabricator.services.mozilla.com/D121199

UltraBlame original commit: df331c8f3557e68fadc8c4086c8ad220c4e6af7b

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -29548,6 +29548,23 @@ true
 mirror
 :
 always
+-
+name
+:
+gfx
+.
+basic_layer_manager
+.
+force_enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
 #
 Whether
 to
@@ -41604,7 +41621,7 @@ contrast
 ratio
 type
 :
-float
+AtomicFloat
 value
 :
 3
@@ -41672,7 +41689,7 @@ contrast
 ratio
 type
 :
-float
+AtomicFloat
 value
 :
 6
