Bug 1709832 - Part 1: Do not fire dragenter/leave at text nodes r=edgar
Differential Revision: https://phabricator.services.mozilla.com/D121006

UltraBlame original commit: 763aa9ea82f03e38f1035fba31a51d749f6d493a

--- a/dom/events/test/mochitest.ini
+++ b/dom/events/test/mochitest.ini
@@ -2129,6 +2129,26 @@ Ahem
 .
 ttf
 [
+test_bug1709832
+.
+html
+]
+support
+-
+files
+=
+!
+/
+dom
+/
+base
+/
+test
+/
+Ahem
+.
+ttf
+[
 test_bug1710509
 .
 html
