Bug 1718210 - Enable SandboxTest on Windows/Debug r=gcp
Differential Revision: https://phabricator.services.mozilla.com/D121047

UltraBlame original commit: 822082abb69473c4ef6db9aab95486ce5760a4d5

--- a/security/sandbox/test/browser.ini
+++ b/security/sandbox/test/browser.ini
@@ -66,6 +66,33 @@ FiraSans
 Regular
 .
 otf
+#
+Bug
+1718210
+we
+need
+to
+disable
+rdd
+in
+gpu
+process
+to
+avoid
+leaks
+at
+shutdown
+prefs
+=
+media
+.
+gpu
+-
+process
+-
+decoder
+=
+false
 [
 browser_content_sandbox_fs
 .
@@ -143,19 +170,5 @@ skip
 -
 if
 =
-(
-debug
-&
-&
-os
-=
-=
-'
-win
-'
-)
-#
-bug
-1718210
 !
 debug
