Bug 1720294 - Part 1: Add a pref 'network.http.referer.disallowCrossSiteRelexingDefault'. r=ckerschb
Add a pref to control if Firefox to disallow relaxing the referrer
policy for cross-site requests. If it's set, we will ignore
'unsafe-url', 'no-referrer-when-downgrade' and
'origin-when-cross-origin' for cross-site requests.

Differential Revision: https://phabricator.services.mozilla.com/D119971

UltraBlame original commit: 4ddb82c5ddbbd9e6eee5005b0152176e3b05310e

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -55141,6 +55141,71 @@ mirror
 always
 #
 Set
+to
+ignore
+referrer
+policies
+which
+is
+less
+restricted
+than
+the
+default
+for
+#
+cross
+-
+site
+requests
+including
+'
+unsafe
+-
+url
+'
+'
+no
+-
+referrer
+-
+when
+-
+downgrade
+'
+and
+#
+'
+origin
+-
+when
+-
+cross
+-
+origin
+'
+.
+-
+name
+:
+network
+.
+http
+.
+referer
+.
+disallowCrossSiteRelaxingDefault
+type
+:
+bool
+value
+:
+IS_EARLY_BETA_OR_EARLIER
+mirror
+:
+always
+#
+Set
 the
 Private
 Browsing
