Bug 1720676 - [marionette] Move component registration into components.conf. r=webdriver-reviewers,jdescottes
Differential Revision: https://phabricator.services.mozilla.com/D121095

UltraBlame original commit: f915c04b9c358a08de3491780aef747df8cf516e

--- a/remote/components/components.conf
+++ b/remote/components/components.conf
@@ -56,6 +56,9 @@ MPL
 Classes
 =
 [
+#
+Remote
+Agent
 {
 "
 cid
@@ -195,6 +198,100 @@ constructor
 :
 "
 GetRemoteAgentHandler
+"
+}
+#
+Marionette
+{
+"
+cid
+"
+:
+"
+{
+786a1369
+-
+dca5
+-
+4adc
+-
+8486
+-
+33d23c88010a
+}
+"
+"
+contract_ids
+"
+:
+[
+"
+mozilla
+.
+org
+/
+remote
+/
+marionette
+;
+1
+"
+]
+"
+categories
+"
+:
+{
+"
+command
+-
+line
+-
+handler
+"
+:
+"
+m
+-
+marionette
+"
+"
+profile
+-
+after
+-
+change
+"
+:
+"
+Marionette
+"
+}
+"
+jsm
+"
+:
+"
+chrome
+:
+/
+/
+remote
+/
+content
+/
+components
+/
+Marionette
+.
+jsm
+"
+"
+constructor
+"
+:
+"
+MarionetteFactory
 "
 }
 ]
