Bug 1720676 - [remote] Remove Remote Agent's Rust implementation. r=webdriver-reviewers,jdescottes
By implementing the command line handling and the
printing to stderr in the JS module of the Remote
Agent, the Rust implementation is no longer necessary.

This change allows the JS component to hold each detail
about the Remote Agent's status. Also it doesn't
require a full build anymore when changes are needed.

Differential Revision: https://phabricator.services.mozilla.com/D121096

UltraBlame original commit: 93a9c870d3d81e39aebae3b50f4e8f16b68dc1ba

--- a/remote/components/components.conf
+++ b/remote/components/components.conf
@@ -95,6 +95,36 @@ agent
 "
 ]
 "
+categories
+"
+:
+{
+"
+command
+-
+line
+-
+handler
+"
+:
+"
+m
+-
+remote
+"
+"
+profile
+-
+after
+-
+change
+"
+:
+"
+RemoteAgent
+"
+}
+"
 jsm
 "
 :
@@ -119,85 +149,6 @@ constructor
 :
 "
 RemoteAgentFactory
-"
-}
-{
-"
-cid
-"
-:
-"
-{
-0d1bb02e
--
-ac91
--
-4904
--
-b61d
--
-97da83ebf6fb
-}
-"
-"
-contract_ids
-"
-:
-[
-"
-mozilla
-.
-org
-/
-commandlinehandler
-/
-general
--
-startup
-;
-1
-?
-type
-=
-remote
-"
-]
-"
-categories
-"
-:
-{
-"
-command
--
-line
--
-handler
-"
-:
-"
-m
--
-remote
-"
-}
-"
-headers
-"
-:
-[
-"
-RemoteAgentHandler
-.
-h
-"
-]
-"
-constructor
-"
-:
-"
-GetRemoteAgentHandler
 "
 }
 #
