Bug 1672317 - [l10nfilesource] part3: Introduce L10nFileSource backed by l10nregistry-rs. r=nika,emilio
Depends on D102102

Differential Revision: https://phabricator.services.mozilla.com/D103002

UltraBlame original commit: 1aaa22cf7c1301569c0e5ba11892d2734642f6c4

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -2210,6 +2210,38 @@ concrete
 False
 }
 '
+L10nFileSource
+'
+:
+{
+'
+headerFile
+'
+:
+'
+mozilla
+/
+intl
+/
+FileSource
+.
+h
+'
+'
+nativeType
+'
+:
+'
+mozilla
+:
+:
+intl
+:
+:
+L10nFileSource
+'
+}
+'
 LegacyMozTCPSocket
 '
 :
