Backed out 2 changesets (bug 1720676) for remote fails on browser_agent.js. CLOSED TREE
Backed out changeset 93a9c870d3d8 (bug 1720676)
Backed out changeset f915c04b9c35 (bug 1720676)

UltraBlame original commit: 7a6ba4880649d1a54c4c41796607353bf73210c5

--- a/mobile/android/installer/package-manifest.in
+++ b/mobile/android/installer/package-manifest.in
@@ -1200,6 +1200,20 @@ ifdef
 ENABLE_WEBDRIVER
 BINPATH
 /
+components
+/
+marionette
+.
+manifest
+BINPATH
+/
+components
+/
+marionette
+.
+js
+BINPATH
+/
 chrome
 /
 remote
