--- a/remote/components/components.conf
+++ b/remote/components/components.conf
@@ -56,9 +56,6 @@ MPL
 Classes
 =
 [
-#
-Remote
-Agent
 {
 "
 cid
@@ -95,36 +92,6 @@ agent
 "
 ]
 "
-categories
-"
-:
-{
-"
-command
--
-line
--
-handler
-"
-:
-"
-m
--
-remote
-"
-"
-profile
--
-after
--
-change
-"
-:
-"
-RemoteAgent
-"
-}
-"
 jsm
 "
 :
@@ -151,8 +118,6 @@ constructor
 RemoteAgentFactory
 "
 }
-#
-Marionette
 {
 "
 cid
@@ -160,15 +125,15 @@ cid
 :
 "
 {
-786a1369
+0d1bb02e
 -
-dca5
+ac91
 -
-4adc
+4904
 -
-8486
+b61d
 -
-33d23c88010a
+97da83ebf6fb
 }
 "
 "
@@ -181,11 +146,17 @@ mozilla
 .
 org
 /
-remote
+commandlinehandler
 /
-marionette
+general
+-
+startup
 ;
 1
+?
+type
+=
+remote
 "
 ]
 "
@@ -204,45 +175,26 @@ handler
 "
 m
 -
-marionette
-"
-"
-profile
--
-after
--
-change
-"
-:
-"
-Marionette
+remote
 "
 }
 "
-jsm
+headers
 "
 :
+[
 "
-chrome
-:
-/
-/
-remote
-/
-content
-/
-components
-/
-Marionette
+RemoteAgentHandler
 .
-jsm
+h
 "
+]
 "
 constructor
 "
 :
 "
-MarionetteFactory
+GetRemoteAgentHandler
 "
 }
 ]
