--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -998,6 +998,20 @@ ifdef
 ENABLE_WEBDRIVER
 RESPATH
 /
+components
+/
+marionette
+.
+manifest
+RESPATH
+/
+components
+/
+marionette
+.
+js
+RESPATH
+/
 chrome
 /
 remote
