Bug 1722524 - Add Windows 10 2004 workers to testing files r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D120975

UltraBlame original commit: 3997b8db21cfbc79c0b8fa2e646ef7cf84924be8

--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -5207,6 +5207,41 @@ gecko
 alias
 }
 '
+win10
+-
+64
+-
+2004
+(
+|
+-
+gpu
+)
+:
+provisioner
+:
+'
+gecko
+-
+t
+'
+implementation
+:
+generic
+-
+worker
+os
+:
+windows
+worker
+-
+type
+:
+'
+{
+alias
+}
+'
 t
 -
 win7
