Bug 1718296 - Part 1: Disable failing mochitest-plain tests on Windows 10 2004 r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D120807

UltraBlame original commit: 0ce1097f95dda90b15494b135add6371b5aa0a5a

--- a/dom/u2f/tests/mochitest.ini
+++ b/dom/u2f/tests/mochitest.ini
@@ -109,6 +109,29 @@ if
 xorigin
 #
 Hangs
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_register
 .
@@ -121,6 +144,29 @@ if
 xorigin
 #
 Hangs
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_register_sign
 .
@@ -133,6 +179,29 @@ if
 xorigin
 #
 Hangs
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_appid_facet
 .
@@ -145,6 +214,29 @@ if
 xorigin
 #
 Hangs
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_appid_facet_insecure
 .
@@ -165,6 +257,29 @@ if
 xorigin
 #
 Hangs
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_multiple_keys
 .
@@ -177,6 +292,29 @@ if
 xorigin
 #
 Hangs
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_override_request
 .
@@ -202,3 +340,26 @@ Bug
 xorigin
 #
 Hangs
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
