--- a/dom/webauthn/tests/mochitest.ini
+++ b/dom/webauthn/tests/mochitest.ini
@@ -36,6 +36,33 @@ fail
 if
 =
 xorigin
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_attestation_conveyance
 .
@@ -48,6 +75,33 @@ if
 xorigin
 #
 NotAllowedError
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_authenticator_selection
 .
@@ -60,6 +114,33 @@ if
 xorigin
 #
 NotAllowedError
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_authenticator_transports
 .
@@ -72,6 +153,33 @@ if
 xorigin
 #
 NotAllowedError
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_loopback
 .
@@ -114,6 +222,29 @@ not
 be
 cloned
 .
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_no_token
 .
@@ -155,6 +286,29 @@ not
 be
 cloned
 .
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_make_credential
 .
@@ -167,6 +321,33 @@ if
 xorigin
 #
 NotAllowedError
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_get_assertion
 .
@@ -179,11 +360,70 @@ if
 xorigin
 #
 NotAllowedError
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_get_assertion_dead_object
 .
 html
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
+(
+TODO
+:
+VERIFY
+)
 [
 test_webauthn_override_request
 .
@@ -201,6 +441,33 @@ if
 xorigin
 #
 NotAllowedError
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_sameorigin
 .
@@ -213,6 +480,33 @@ if
 xorigin
 #
 NotAllowedError
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_sameoriginwithancestors
 .
@@ -233,6 +527,29 @@ cross
 -
 origin
 setup
+win10_2004
+#
+Bug
+1718296
+(
+Windows
+10
+1903
++
+has
+its
+own
+window
+and
+U2F
+that
+we
+cannot
+control
+with
+tests
+.
+)
 [
 test_webauthn_isplatformauthenticatoravailable
 .
