Bug 1721109 - Move ProfilerGetSymbols code out of toolkit/components/extensions and into devtools directories. r=canaltinova
Differential Revision: https://phabricator.services.mozilla.com/D120182

UltraBlame original commit: ca3603e1f06e83781f4a58dcd11ea28d7932388a

--- a/.eslintignore
+++ b/.eslintignore
@@ -659,6 +659,25 @@ sourcemapped
 .
 js
 #
+Ignore
+generated
+code
+from
+wasm
+-
+bindgen
+devtools
+/
+client
+/
+performance
+-
+new
+/
+profiler_get_symbols
+.
+js
+#
 Testing
 syntax
 error
@@ -1402,23 +1421,6 @@ platform
 toolkit
 /
 exclusions
-#
-Ignore
-generated
-code
-from
-wasm
--
-bindgen
-toolkit
-/
-components
-/
-extensions
-/
-profiler_get_symbols
-.
-js
 #
 Intentionally
 invalid
