--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -1769,6 +1769,12 @@ sdk
 10
 .
 12
+-
+wasi
+-
+sysroot
+-
+11
 macosx64
 -
 aarch64
@@ -1941,6 +1947,12 @@ sdk
 11
 .
 0
+-
+wasi
+-
+sysroot
+-
+11
 win64
 -
 clang
@@ -2108,6 +2120,14 @@ clang
 cmake
 -
 ninja
+toolchain
+:
+-
+wasi
+-
+sysroot
+-
+11
 win64
 -
 clang
@@ -3210,6 +3230,12 @@ sdk
 10
 .
 12
+-
+wasi
+-
+sysroot
+-
+12
 macosx64
 -
 aarch64
@@ -3391,6 +3417,12 @@ sdk
 11
 .
 0
+-
+wasi
+-
+sysroot
+-
+12
 win64
 -
 clang
@@ -3565,6 +3597,14 @@ clang
 cmake
 -
 ninja
+toolchain
+:
+-
+wasi
+-
+sysroot
+-
+12
 win64
 -
 clang
