Bug 1721843 [wpt PR 29747] - Update wpt metadata, a=testonly
wpt-pr: 29747
wpt-type: metadata

UltraBlame original commit: 9784ac11d027ce0088fc74039c8f9f3a69652308

--- a/testing/web-platform/meta/file-system-access/sandboxed_FileSystemSyncAccessHandle-close.https.tentative.worker.js.ini
+++ b/testing/web-platform/meta/file-system-access/sandboxed_FileSystemSyncAccessHandle-close.https.tentative.worker.js.ini
@@ -150,3 +150,32 @@ settles
 expected
 :
 FAIL
+[
+SyncAccessHandle
+.
+truncate
+fails
+after
+SyncAccessHandle
+.
+close
+settles
+]
+expected
+:
+FAIL
+[
+SyncAccessHandle
+.
+truncate
+fails
+immediately
+after
+calling
+SyncAccessHandle
+.
+close
+]
+expected
+:
+FAIL
