Bug 1721964 [wpt PR 29760] - Update wpt metadata, a=testonly
wpt-pr: 29760
wpt-type: metadata

UltraBlame original commit: ced07a0d4cd5c45c2ba3c82a425779a62a4f86f2

--- a/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/anonymous-iframe-popup.tentative.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/anonymous-iframe-popup.tentative.https.html.ini
@@ -17,8 +17,11 @@ Cross
 origin
 popup
 from
+normal
+/
 anonymous
-iframe
+iframes
+.
 ]
 expected
 :
@@ -29,8 +32,11 @@ Same
 origin
 popup
 from
+normal
+/
 anonymous
-iframe
+iframes
+.
 ]
 expected
 :
