Bug 1722104 [wpt PR 29770] - Update wpt metadata, a=testonly
wpt-pr: 29770
wpt-type: metadata

UltraBlame original commit: 76ccc8f04a749f2551c4e53fc043c660601aefd7

--- a/testing/web-platform/meta/js-self-profiling/max-buffer-size.window.js.ini
+++ b/testing/web-platform/meta/js-self-profiling/max-buffer-size.window.js.ini
@@ -5,7 +5,7 @@ buffer
 -
 size
 .
-https
+window
 .
 html
 ]
@@ -32,9 +32,13 @@ expected
 :
 FAIL
 [
-executed
+ensure
 samplebufferfull
-function
+is
+fired
+on
+full
+profiler
 ]
 expected
 :
