Bug 1720566 [wpt PR 29666] - Update wpt metadata, a=testonly
wpt-pr: 29666
wpt-type: metadata

UltraBlame original commit: 10c06d3557bd6ba08650db6bbe523f216e2c5b17

--- a/testing/web-platform/meta/url/url-origin.any.js.ini
+++ b/testing/web-platform/meta/url/url-origin.any.js.ini
@@ -168,6 +168,33 @@ expected
 :
 FAIL
 [
+Origin
+parsing
+:
+<
+http
+:
+/
+/
+999999999
+.
+>
+against
+<
+http
+:
+/
+/
+other
+.
+com
+/
+>
+]
+expected
+:
+FAIL
+[
 url
 -
 origin
@@ -333,6 +360,33 @@ against
 about
 :
 blank
+>
+]
+expected
+:
+FAIL
+[
+Origin
+parsing
+:
+<
+http
+:
+/
+/
+999999999
+.
+>
+against
+<
+http
+:
+/
+/
+other
+.
+com
+/
 >
 ]
 expected
