--- a/testing/web-platform/meta/url/a-element-origin-xhtml.xhtml.ini
+++ b/testing/web-platform/meta/url/a-element-origin-xhtml.xhtml.ini
@@ -169,3 +169,30 @@ blank
 expected
 :
 FAIL
+[
+Parsing
+origin
+:
+<
+http
+:
+/
+/
+999999999
+.
+>
+against
+<
+http
+:
+/
+/
+other
+.
+com
+/
+>
+]
+expected
+:
+FAIL
