--- a/testing/web-platform/meta/url/failure.html.ini
+++ b/testing/web-platform/meta/url/failure.html.ini
@@ -8,6 +8,29 @@ max
 asserts
 :
 3
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+OK
+CRASH
 [
 URL
 '
@@ -5547,6 +5570,2937 @@ ho
 %
 7Cst
 /
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+.
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+.
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+.
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+.
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+.
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+0
+.
+.
+0x300
+.
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+08
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+1
+.
+2
+.
+3
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+09
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+01
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+0x100
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+0x1
+.
+2
+.
+3
+.
+4
+.
+5
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+1
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+2
+.
+3
+.
+4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+09
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+09
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+09
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+09
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+09
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+09
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+09
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+0x4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+0x4
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+0x4
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+0x4
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+0x4
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+0x4
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+0x4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+0x4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+0x4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+0x4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+0x4
+.
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+0x4
+.
 should
 throw
 ]
