--- a/testing/web-platform/meta/mathml/presentation-markup/operators/mo-minsize-maxsize-001.html.ini
+++ b/testing/web-platform/meta/mathml/presentation-markup/operators/mo-minsize-maxsize-001.html.ini
@@ -72,3 +72,28 @@ minsize
 expected
 :
 FAIL
+[
+minsize
+/
+maxsize
+percentages
+are
+relative
+to
+the
+target
+size
+]
+expected
+:
+FAIL
+[
+default
+minsize
+/
+maxsize
+percentages
+]
+expected
+:
+FAIL
