--- a/testing/web-platform/meta/cookies/samesite/form-post-blank-reload.https.html.ini
+++ b/testing/web-platform/meta/cookies/samesite/form-post-blank-reload.https.html.ini
@@ -43,6 +43,25 @@ always_accept
 true
 ]
 [
+Reloaded
+cross
+-
+site
+top
+-
+level
+form
+POSTs
+are
+strictly
+same
+-
+site
+]
+expected
+:
+FAIL
+[
 form
 -
 post
