Bug 1722913 - Port remaining tests on Linux to WebRender. r=jmaher,perftest-reviewers,AlexandruIonescu
This corrects a number of tests that got disabled in the transition, and
a few that we never moved over. It also disables the non-WebRender
versions of many tests.

autoland

--- target_task_set6d262ed
+++ target_task_setao_ci_linux_tsan
+test-linux1804-64-asan-qr/opt-marionette-fis-e10s
+test-linux1804-64-asan-qr/opt-mochitest-plain-e10s
+test-linux1804-64-asan-qr/opt-mochitest-plain-fis-e10s
+test-linux1804-64-asan-qr/opt-mochitest-plain-gpu-e10s
+test-linux1804-64-asan-qr/opt-reftest-fis-e10s
+test-linux1804-64-asan-qr/opt-test-verify-gpu-e10s
-test-linux1804-64-asan/opt-cppunit-1proc
-test-linux1804-64-asan/opt-firefox-ui-functional-local-e10s
-test-linux1804-64-asan/opt-firefox-ui-functional-remote-e10s
-test-linux1804-64-asan/opt-gtest-1proc
-test-linux1804-64-asan/opt-jsreftest-e10s
-test-linux1804-64-asan/opt-marionette-e10s
-test-linux1804-64-asan/opt-marionette-fis-e10s
-test-linux1804-64-asan/opt-mochitest-a11y-1proc
-test-linux1804-64-asan/opt-mochitest-chrome-1proc
-test-linux1804-64-asan/opt-mochitest-chrome-gpu-e10s
-test-linux1804-64-asan/opt-mochitest-plain-e10s
-test-linux1804-64-asan/opt-mochitest-plain-fis-e10s
-test-linux1804-64-asan/opt-mochitest-plain-gpu-e10s
-test-linux1804-64-asan/opt-mochitest-remote-e10s
-test-linux1804-64-asan/opt-mochitest-webgl1-core-e10s
-test-linux1804-64-asan/opt-mochitest-webgl1-core-gli-e10s
-test-linux1804-64-asan/opt-mochitest-webgl1-ext-e10s
-test-linux1804-64-asan/opt-mochitest-webgl1-ext-fis-gli-e10s
-test-linux1804-64-asan/opt-mochitest-webgl1-ext-gli-e10s
-test-linux1804-64-asan/opt-mochitest-webgl2-core-e10s
-test-linux1804-64-asan/opt-mochitest-webgl2-core-gli-e10s
-test-linux1804-64-asan/opt-mochitest-webgl2-ext-e10s
-test-linux1804-64-asan/opt-mochitest-webgl2-ext-fis-e10s
-test-linux1804-64-asan/opt-mochitest-webgl2-ext-fis-gli-e10s
-test-linux1804-64-asan/opt-mochitest-webgl2-ext-gli-e10s
-test-linux

--- a/gfx/layers/apz/test/mochitest/mochitest.ini
+++ b/gfx/layers/apz/test/mochitest/mochitest.ini
@@ -849,6 +849,21 @@ property
 "
 getResolution
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+fission
+&
+&
+headless
+#
+Bug
+1722907
 [
 test_relative_update
 .
@@ -1214,6 +1229,24 @@ asan
 &
 &
 webrender
+os
+=
+=
+'
+linux
+'
+&
+&
+asan
+#
+stack
+is
+not
+large
+enough
+for
+the
+test
 xorigin
 #
 Hangs
