Backed out changeset 93c0dc15cc3b (bug 1720828) for causing xpcshell failures in test_hunspell.js
UltraBlame original commit: 1618b5beb0bddea1331ba022d7bc9e14ac3c517f

--- a/taskcluster/ci/instrumented-build/kind.yml
+++ b/taskcluster/ci/instrumented-build/kind.yml
@@ -461,6 +461,10 @@ linux64
 -
 node
 -
+linux64
+-
+lucetc
+-
 sysroot
 -
 x86_64
@@ -656,6 +660,10 @@ nasm
 linux64
 -
 node
+-
+linux64
+-
+lucetc
 -
 macosx64
 -
