--- a/taskcluster/ci/searchfox/kind.yml
+++ b/taskcluster/ci/searchfox/kind.yml
@@ -293,6 +293,10 @@ linux64
 -
 dump_syms
 -
+linux64
+-
+lucetc
+-
 sysroot
 -
 x86_64
@@ -505,6 +509,10 @@ cbindgen
 linux64
 -
 dump_syms
+-
+linux64
+-
+lucetc
 -
 macosx64
 -
