Bug 1722891: Allow selecting snapshots that have a specific type of page data available. r=Standard8
Differential Revision: https://phabricator.services.mozilla.com/D121187

UltraBlame original commit: b02a874ecbd9bc18929b4fc4dde478b46b529be2

--- a/browser/components/places/tests/unit/interactions/xpcshell.ini
+++ b/browser/components/places/tests/unit/interactions/xpcshell.ini
@@ -25,6 +25,13 @@ browser
 .
 pagedata
 .
+enabled
+=
+true
+browser
+.
+pagedata
+.
 log
 =
 true
@@ -75,6 +82,11 @@ js
 ]
 [
 test_snapshotselection_recent
+.
+js
+]
+[
+test_snapshotselection_typed
 .
 js
 ]
