Bug 1660392 - [l10nregistry] part2: Add L10nRegistry WebIDL backed by l10nregistry-rs. r=nika,emilio
Depends on D105415

Differential Revision: https://phabricator.services.mozilla.com/D102096

UltraBlame original commit: ba23990f6fcd220265d39eb085c1b9d84b5836dd

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1503,6 +1503,70 @@ FluentBundle
 '
 }
 '
+FluentBundleAsyncIterator
+'
+:
+{
+'
+headerFile
+'
+:
+'
+mozilla
+/
+intl
+/
+L10nRegistry
+.
+h
+'
+'
+nativeType
+'
+:
+'
+mozilla
+:
+:
+intl
+:
+:
+FluentBundleAsyncIterator
+'
+}
+'
+FluentBundleIterator
+'
+:
+{
+'
+headerFile
+'
+:
+'
+mozilla
+/
+intl
+/
+L10nRegistry
+.
+h
+'
+'
+nativeType
+'
+:
+'
+mozilla
+:
+:
+intl
+:
+:
+FluentBundleIterator
+'
+}
+'
 FluentPattern
 '
 :
@@ -2239,6 +2303,25 @@ intl
 :
 :
 L10nFileSource
+'
+}
+'
+L10nRegistry
+'
+:
+{
+'
+nativeType
+'
+:
+'
+mozilla
+:
+:
+intl
+:
+:
+L10nRegistry
 '
 }
 '
