Bug 1718296 - Part 2: Migrate mochitest-plain test suite to new Azure Windows 10 2004 workers r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D121236

UltraBlame original commit: 91da0a613facfdc978435004ed44c11a10262360

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -1364,10 +1364,6 @@ mochitest
 -
 plain
 -
-mochitest
--
-plain
--
 gpu
 -
 mochitest
@@ -1487,6 +1483,16 @@ mochitest
 webgl2
 -
 ext
+windows10
+-
+2004
+-
+tests
+:
+-
+mochitest
+-
+plain
 mingwclang
 -
 tests
