Bug 1709969 Part 3 - Migrate from an existing profile when creating the dedicated profile for a Windows app package. r=mossop,agashlin
Differential Revision: https://phabricator.services.mozilla.com/D117244

UltraBlame original commit: 17ed7ca869982514a4a19ebad2dc5964b5cc90ee

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -23130,6 +23130,8 @@ bug_numbers
 1570652
 -
 1623406
+-
+1709969
 description
 :
 >
@@ -23373,6 +23375,35 @@ new
 profile
 to
 use
+.
+firstrun
+-
+migrated
+-
+default
+:
+A
+first
+run
+of
+the
+application
+created
+a
+new
+profile
+to
+use
+based
+on
+migrating
+an
+existing
+profile
+from
+the
+same
+application
 .
 default
 :
