--- a/toolkit/profile/xpcshell/xpcshell.ini
+++ b/toolkit/profile/xpcshell/xpcshell.ini
@@ -231,3 +231,13 @@ test_register_app_services_logger
 .
 js
 ]
+[
+test_select_profile_package
+.
+js
+]
+[
+test_select_profile_package_downgrade
+.
+js
+]
