Bug 1717314 - do not force a dialog for https-redirect-to-external-protocol links from external sources, r=nika,pbz,necko-reviewers,valentin
Differential Revision: https://phabricator.services.mozilla.com/D120879

UltraBlame original commit: bb055da29523ddc0e4b0b313e864d6894ee286e4

--- a/uriloader/exthandler/tests/mochitest/browser.ini
+++ b/uriloader/exthandler/tests/mochitest/browser.ini
@@ -283,6 +283,13 @@ browser_protocol_ask_dialog_external
 .
 js
 ]
+support
+-
+files
+=
+redirect_helper
+.
+sjs
 [
 browser_protocol_ask_dialog_permission
 .
