--- a/tools/profiler/rust-api/Cargo.toml
+++ b/tools/profiler/rust-api/Cargo.toml
@@ -36,6 +36,50 @@ edition
 dependencies
 ]
 [
+build
+-
+dependencies
+]
+lazy_static
+=
+"
+1
+"
+bindgen
+=
+{
+version
+=
+"
+0
+.
+56
+"
+default
+-
+features
+=
+false
+}
+toml
+=
+{
+version
+=
+"
+0
+.
+4
+.
+5
+"
+default
+-
+features
+=
+false
+}
+[
 features
 ]
 #
