Bug 1652560 - Remove the old profiler label frames code in the servo codebase and replace it with the new API r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D120795

UltraBlame original commit: 83d89dc9f8350a5bb62fb81e07c1c3bd8eb63009

--- a/servo/ports/geckolib/Cargo.toml
+++ b/servo/ports/geckolib/Cargo.toml
@@ -120,6 +120,32 @@ cstr
 .
 2
 "
+gecko
+-
+profiler
+=
+{
+path
+=
+"
+.
+.
+/
+.
+.
+/
+.
+.
+/
+tools
+/
+profiler
+/
+rust
+-
+api
+"
+}
 libc
 =
 "
